create login/signup/profile components

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontend"
+    }
+  },
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": "b56bfd86-317c-4c66-a820-0a33220462df"
+  }
 }
